update version to 1.1.0

--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -12,7 +12,7 @@
   "deleteNode": "删除节点",
   "devTools": "切换开发者工具",
   "donotSave": "不保存",
-  "duplicate": "复制",
+  "duplicate": "生成副本",
   "editSubtree": "编辑子树",
   "forceReload": "强制重新加载",
   "fullscreen": "切换全屏",
