translation for nodes

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -24,6 +24,7 @@
   "newFile": "New File...",
   "newFolder": "New Folder...",
   "newWindow": "New Window",
+  "nodeDefinition": "NODES",
   "open": "Open...",
   "openProject": "Open Project",
   "paste": "Paste",
