--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -24,6 +24,7 @@
   "newFile": "新建行为树...",
   "newFolder": "新建目录...",
   "newWindow": "新建窗口",
+  "nodeDefinition": "节点定义",
   "open": "打开...",
   "openProject": "打开项目",
   "paste": "粘贴",
