add filter icons

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -42,6 +42,7 @@
   "saveAs": "Save As...",
   "saveAsSubtree": "Save As Subtree",
   "searchFile": "Search File",
+  "searchNode": "Search Node",
   "services": "Services",
   "start": "Start",
   "undo": "Undo",
