--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -42,6 +42,7 @@
   "saveAs": "另存为...",
   "saveAsSubtree": "另存为子树",
   "searchFile": "搜索文件",
+  "searchNode": "搜索节点",
   "services": "服务",
   "start": "开始",
   "undo": "撤销",
