add ctrl/command + g to jump node by id

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -19,6 +19,7 @@
   "hide": "Hide Behavior3",
   "hideOthers": "Hide Others",
   "insertNode": "Insert Node",
+  "jumpNode": "Jump Node",
   "language": "Language",
   "moveToTrash": "Move to Trash",
   "newFile": "New File...",
