update project template

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -94,41 +94,5 @@
   "node.subtree": "Subtree",
   "node.subtreePathError": "You should save the subtree inside the current workspace",
 
-  "node.unknown.desc": "New node",
-  "node.alwaysFail.desc": "Always return failure",
-  "node.alwaysFail.doc": "+ Only one child node, multiple child nodes will be executed first\n+ If any child node fails, return failure",
-  "node.alwaysSuccess.desc": "Always return success",
-  "node.alwaysSuccess.doc": "+ Only one child node, multiple child nodes will be executed first\n+ If any child node fails, return success",
-  "node.check.arg1.desc": "Expression",
-  "node.check.desc": "Evaluate expression",
-  "node.check.doc": "+ Do simple calculation, return success or failure",
-  "node.clear.desc": "Clear variable",
-  "node.clear.output1": "Variable name",
-  "node.forEach.desc": "Iterate array",
-  "node.forEach.input1": "Array",
-  "node.forEach.output1": "Variable name",
-  "node.forEach.doc": "+ Before executing each child node, set the current variable to the output\n+ Execute all child nodes\n+ Return success or running",
-  "node.getTime.desc": "Get current time",
-  "node.getTime.output1": "Current time",
-  "node.isNull.desc": "Check variable is null",
-  "node.isNull.input1": "Variable",
-  "node.log.desc": "Print log",
-  "node.log.arg1.desc": "Log content",
-  "node.loop.desc": "Loop execute",
-  "node.loop.arg1.desc": "Loop times",
-  "node.loop.input1": "Loop times",
-  "node.not.desc": "Invert",
-  "node.not.doc": "+ Invert the return value",
-  "node.notNull.desc": "Check variable is not null",
-  "node.notNull.input1": "Variable",
-  "node.once.desc": "Execute once",
-  "node.once.doc": "+ Execute all child nodes\n+ Return success or running",
-  "node.parallel.desc": "Parallel execute",
-  "node.parallel.doc": "+ Execute all child nodes\n+ Return success",
-  "node.selector.desc": "Selector execute",
-  "node.selector.doc": "+ Execute all child nodes\n+ Return success or failure",
-  "node.sequence.desc": "Sequence execute",
-  "node.sequence.doc": "+ Execute all child nodes\n+ Return success or failure",
-  "node.wait.desc": "Wait",
-  "node.wait.arg1.desc": "Wait time"
+  "node.unknown.desc": "New node"
 }
