--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -94,41 +94,5 @@
   "node.subtree": "子树",
   "node.subtreePathError": "子树必须保存在当前工作区的目录内",
 
-  "node.unknown.desc": "新建节点",
-  "node.alwaysFail.desc": "始终返回失败",
-  "node.alwaysFail.doc": "+ 只能有一个子节点,多个仅执行第一个\n+ 不管子节点是否成功都返回失败",
-  "node.alwaysSuccess.desc": "始终返回成功",
-  "node.alwaysSuccess.doc": "+ 只能有一个子节点,多个仅执行第一个\n+ 不管子节点是否成功都返回成功",
-  "node.check.arg1.desc": "表达式",
-  "node.check.desc": "对表达式进行求值",
-  "node.check.doc": "+ 做简单数值公式判定，返回成功或失败",
-  "node.clear.desc": "清除变量",
-  "node.clear.output1": "清除的变量名",
-  "node.forEach.desc": "遍历数组",
-  "node.forEach.input1": "数组",
-  "node.forEach.output1": "变量名",
-  "node.forEach.doc": "+ 每次执行子节点前会设置当前遍历到的变量\n+ 会执行所有子节点\n+ 永远返回成功/正在运行",
-  "node.getTime.desc": "获取当前时间",
-  "node.getTime.output1": "当前时间",
-  "node.isNull.desc": "判断变量是否为空",
-  "node.isNull.input1": "判断的变量",
-  "node.log.desc": "打印日志",
-  "node.log.arg1.desc": "日志内容",
-  "node.loop.desc": "循环执行",
-  "node.loop.arg1.desc": "循环次数",
-  "node.loop.input1": "循环次数",
-  "node.not.desc": "取反",
-  "node.not.doc": "+ 将子节点的返回值取反",
-  "node.notNull.desc": "判断变量是否存在",
-  "node.notNull.input1": "判断的变量",
-  "node.once.desc": "只执行一次",
-  "node.once.doc": "+ 可以接多个子节点，子节点默认全部执行\n+ 被打断后该节点后的子节点依旧不会执行\n+ 该节点执行后永远返回成功",
-  "node.parallel.desc": "并行执行",
-  "node.parallel.doc": "+ 执行所有子节点并返回成功",
-  "node.selector.desc": "选择执行",
-  "node.selector.doc": "+ 一直往下执行，有子节点返回成功则返回成功，若全部节点返回失败则返回失败\n+ 子节点是或 (OR) 的关系",
-  "node.sequence.desc": "顺序执行",
-  "node.sequence.doc": "+ 一直往下执行，只有当所有子节点都返回成功, 才返回成功\n+ 子节点是与（AND）的关系",
-  "node.wait.desc": "等待",
-  "node.wait.arg1.desc": "等待时间"
+  "node.unknown.desc": "新建节点"
 }
