fixed issue where couldn't cut and selectAll on macos

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -7,6 +7,7 @@
   "buildFailed": "Build failed, more information can be found in the console.",
   "cancel": "Cancel",
   "copy": "Copy",
+  "cut": "Cut",
   "createProject": "Create Project",
   "delete": "Delete",
   "deleteNode": "Delete Node",
@@ -44,6 +45,7 @@
   "saveAsSubtree": "Save As Subtree",
   "searchFile": "Search File",
   "searchNode": "Search Node",
+  "selectAll": "Select All",
   "services": "Services",
   "start": "Start",
   "undo": "Undo",
