--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -7,6 +7,7 @@
   "buildFailed": "构建出现错误，详情请查看控制台！",
   "cancel": "取消",
   "copy": "复制",
+  "cut": "替换",
   "createProject": "新建项目",
   "delete": "删除",
   "deleteNode": "删除节点",
@@ -44,6 +45,7 @@
   "saveAsSubtree": "另存为子树",
   "searchFile": "搜索文件",
   "searchNode": "搜索节点",
+  "selectAll": "全选",
   "services": "服务",
   "start": "开始",
   "undo": "撤销",
