support  don't export tree

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -71,6 +71,7 @@
   "tree.overview": "Overview",
   "tree.name": "Tree name",
   "tree.desc": "Tree desc",
+  "tree.export": "Export",
 
   "regnode.input": "Input: ",
   "regnode.output": "Output: ",
