support object type and oneof check

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -82,24 +82,27 @@
   "regnode.subtree": "Subtree: ",
 
   "node.args": "Const arguments",
-  "node.children": "Subnode limit",
   "node.children.unlimited": "Unlimited",
+  "node.children": "Subnode limit",
   "node.debug": "Debug",
-  "node.disabled": "Disabled",
   "node.deleteRootNodeDenied": "Unable to delete the root node",
-  "node.editSubtreeDenied": "Unable to edit the subtree node",
   "node.desc": "Node desc",
-  "node.fileRequired": "field '{{field}}' is required",
+  "node.disabled": "Disabled",
+  "node.editSubtreeDenied": "Unable to edit the subtree node",
+  "node.fileRequired": "Field '{{field}}' is required",
   "node.id": "Node id",
   "node.inputVariable": "Input variables",
+  "node.invalidValue": "Invalid value",
   "node.name": "Node name",
-  "node.type": "Node type",
   "node.noNodeSelected": "No node selected",
+  "node.oneof.error": "Only one is allowed between input '{{input}}' and argument '{{arg}}({{desc}})'",
+  "node.oneof.inputNotfound": "Input '{{input}}' not found",
   "node.outputVariable": "Output variables",
   "node.pasteDataError": "Paste data error",
   "node.rootNodeAsSubtree": "Root node cann't be save as subtree",
   "node.subtree": "Subtree",
   "node.subtreePathError": "You should save the subtree inside the current workspace",
+  "node.type": "Node type",
 
   "node.unknown.desc": "New node"
 }
