--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -82,24 +82,27 @@
   "regnode.subtree": "子树：",
 
   "node.args": "常量参数",
-  "node.children": "子节点数量",
   "node.children.unlimited": "无限制",
+  "node.children": "子节点数量",
   "node.debug": "调试",
-  "node.disabled": "禁用",
   "node.deleteRootNodeDenied": "不能删除根节点",
-  "node.editSubtreeDenied": "不能编辑子树节点",
   "node.desc": "节点说明",
+  "node.disabled": "禁用",
+  "node.editSubtreeDenied": "不能编辑子树节点",
   "node.fileRequired": "字段“{{field}}”必填",
   "node.id": "节点标识",
   "node.inputVariable": "输入变量",
+  "node.invalidValue": "无效的值",
   "node.name": "节点名称",
-  "node.type": "节点类型",
   "node.noNodeSelected": "未选择任务节点",
+  "node.oneof.error": "输入项 “{{input}}” 和参数 “{{arg}}({{desc}})” 之中，只能选择设置其中之一",
+  "node.oneof.inputNotfound": "输入项“{{input}}”不存在",
   "node.outputVariable": "输出变量",
   "node.pasteDataError": "粘贴数据出错",
   "node.rootNodeAsSubtree": "根节点不能保存为子树",
   "node.subtree": "子树",
   "node.subtreePathError": "子树必须保存在当前工作区的目录内",
+  "node.type": "节点类型",
 
   "node.unknown.desc": "新建节点"
 }
