--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -10,7 +10,7 @@
   "cancel": "取消",
   "copy": "复制",
   "console": "控制台",
-  "cut": "替换",
+  "cut": "剪切",
   "createProject": "新建项目",
   "delete": "删除",
   "deleteNode": "删除节点",
