--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -76,6 +76,7 @@
   "tree.name": "行为树",
   "tree.desc": "说明",
   "tree.export": "导出",
+  "tree.firstid": "起始标识",
 
   "regnode.input": "输入：",
   "regnode.output": "输出：",
