edit variable definition

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,5 +1,6 @@
 {
   "about": "About Behavior3",
+  "add": "Add",
   "actuaSize": "Actual Size",
   "build": "Build",
   "batch": "Batch Script",
@@ -18,6 +19,7 @@
   "donotSave": "Don't Save",
   "duplicate": "Duplicate",
   "editSubtree": "Edit Subtree",
+  "fieldRequired": "Field '{{field}}' is required",
   "forceReload": "Force Reload",
   "fullscreen": "Toggle Full Screen",
   "hide": "Hide Behavior3",
@@ -77,6 +79,11 @@
   "tree.desc": "Tree desc",
   "tree.export": "Export",
   "tree.firstid": "First id",
+  "tree.vars": "Variable Definition",
+  "tree.vars.name": "name",
+  "tree.vars.invalidName": "Invalid variable name",
+  "tree.vars.desc": "description",
+  "tree.vars.imports": "Variable References",
 
   "regnode.input": "Input: ",
   "regnode.output": "Output: ",
@@ -85,9 +92,6 @@
   "regnode.subtree": "Subtree: ",
 
   "node.args": "Const arguments",
-  "node.args.add": "Add Sub Item",
-  "node.input.add": "Add Input Item",
-  "node.output.add": "Add Output Item",
   "node.children.unlimited": "Unlimited",
   "node.children": "Num children",
   "node.debug": "Debug",
@@ -95,7 +99,6 @@
   "node.desc": "Node desc",
   "node.disabled": "Disabled",
   "node.editSubtreeDenied": "Unable to edit the subtree node",
-  "node.fileRequired": "Field '{{field}}' is required",
   "node.id": "Node id",
   "node.inputVariable": "Input variables",
   "node.invalidValue": "Invalid value",
