--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -1,5 +1,6 @@
 {
   "about": "关于 Behavior3",
+  "add": "添加",
   "actualSize": "实际大小",
   "build": "构建",
   "batch": "批处理脚本",
@@ -18,6 +19,7 @@
   "donotSave": "不保存",
   "duplicate": "生成副本",
   "editSubtree": "编辑子树",
+  "fieldRequired": "字段“{{field}}”必填",
   "forceReload": "强制重新加载",
   "fullscreen": "切换全屏",
   "hide": "隐藏 Behavior3",
@@ -77,6 +79,11 @@
   "tree.desc": "说明",
   "tree.export": "导出",
   "tree.firstid": "起始标识",
+  "tree.vars": "变量定义",
+  "tree.vars.name": "变量名",
+  "tree.vars.invalidName": "变量名不合法",
+  "tree.vars.desc": "变量说明",
+  "tree.vars.imports": "变量引用",
 
   "regnode.input": "输入：",
   "regnode.output": "输出：",
@@ -85,9 +92,6 @@
   "regnode.subtree": "子树：",
 
   "node.args": "常量参数",
-  "node.args.add": "添加子项",
-  "node.input.add": "添加输入项",
-  "node.output.add": "添加输出项",
   "node.children.unlimited": "无限制",
   "node.children": "子节点数量",
   "node.debug": "调试",
@@ -95,7 +99,6 @@
   "node.desc": "节点说明",
   "node.disabled": "禁用",
   "node.editSubtreeDenied": "不能编辑子树节点",
-  "node.fileRequired": "字段“{{field}}”必填",
   "node.id": "节点标识",
   "node.inputVariable": "输入变量",
   "node.invalidValue": "无效的值",
