load subtree variable definition

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -79,11 +79,12 @@
   "tree.desc": "Tree desc",
   "tree.export": "Export",
   "tree.firstid": "First id",
-  "tree.vars": "Variable Definition",
+  "tree.vars": "Define Variables",
   "tree.vars.name": "name",
   "tree.vars.invalidName": "Invalid variable name",
   "tree.vars.desc": "description",
-  "tree.vars.imports": "Variable References",
+  "tree.vars.imports": "Import Variables",
+  "tree.vars.subtree": "Subtree Variables",
 
   "regnode.input": "Input: ",
   "regnode.output": "Output: ",
