--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -79,11 +79,12 @@
   "tree.desc": "说明",
   "tree.export": "导出",
   "tree.firstid": "起始标识",
-  "tree.vars": "变量定义",
+  "tree.vars": "定义变量",
   "tree.vars.name": "变量名",
   "tree.vars.invalidName": "变量名不合法",
   "tree.vars.desc": "变量说明",
-  "tree.vars.imports": "变量引用",
+  "tree.vars.imports": "导入变量",
+  "tree.vars.subtree": "子树变量",
 
   "regnode.input": "输入：",
   "regnode.output": "输出：",
