refresh layout on switch file

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,19 +1,20 @@
 {
   "about": "About Behavior3",
-  "add": "Add",
   "actuaSize": "Actual Size",
+  "add": "Add",
   "alertNewVersion": "This file is created by a newer version of Behavior3({{version}}), please upgrade to the latest version.",
-  "build": "Build",
   "batch": "Batch Script",
   "batchCompleted": "Batch completed",
   "batchFailed": "Batch failed, more information can be found in the console.",
+  "build": "Build",
   "buildCompleted": "Build completed",
   "buildFailed": "Build failed, more information can be found in the console.",
   "cancel": "Cancel",
-  "copy": "Copy",
+  "compact": "Compact",
   "console": "Console",
-  "cut": "Cut",
+  "copy": "Copy",
   "createProject": "Create Project",
+  "cut": "Cut",
   "delete": "Delete",
   "deleteNode": "Delete Node",
   "devTools": "Toggle Developer Tools",
@@ -33,6 +34,8 @@
   "newFolder": "New Folder...",
   "newWindow": "New Window",
   "nodeDefinition": "NODES",
+  "nodeLayout": "Node Layout",
+  "normal": "Normal",
   "open": "Open...",
   "openProject": "Open Project",
   "paste": "Paste",
