--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -1,19 +1,20 @@
 {
   "about": "关于 Behavior3",
-  "add": "添加",
   "actualSize": "实际大小",
+  "add": "添加",
   "alertNewVersion": "此文件由新版本 Behavior3({{version}}) 创建，请升级到最新版本。",
-  "build": "构建",
   "batch": "批处理脚本",
   "batchCompleted": "批处理完成",
   "batchFailed": "批处理出现错误，详情请查看控制台！",
+  "build": "构建",
   "buildCompleted": "构建完成",
   "buildFailed": "构建出现错误，详情请查看控制台！",
   "cancel": "取消",
-  "copy": "复制",
+  "compact": "紧凑",
   "console": "控制台",
-  "cut": "剪切",
+  "copy": "复制",
   "createProject": "新建项目",
+  "cut": "剪切",
   "delete": "删除",
   "deleteNode": "删除节点",
   "devTools": "切换开发者工具",
@@ -33,6 +34,8 @@
   "newFolder": "新建目录...",
   "newWindow": "新建窗口",
   "nodeDefinition": "节点定义",
+  "nodeLayout": "节点布局",
+  "normal": "正常",
   "open": "打开...",
   "openProject": "打开项目",
   "paste": "粘贴",
