implement expression validation and build script setup in workspace

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -14,6 +14,7 @@
   "console": "Console",
   "copy": "Copy",
   "createProject": "Create Project",
+  "checkExpr": "Check expression",
   "cut": "Cut",
   "delete": "Delete",
   "deleteNode": "Delete Node",
@@ -56,6 +57,7 @@
   "searchNode": "Search Node",
   "selectAll": "Select All",
   "services": "Services",
+  "setupBuildScript": "Setup Build Script",
   "start": "Start",
   "undo": "Undo",
   "unhide": "Show All",
@@ -106,10 +108,11 @@
   "node.disabled": "Disabled",
   "node.editSubtreeDenied": "Unable to edit the subtree node",
   "node.group": "Node group",
+  "node.groupNotEnabled": "One of '{{group}}' node group is not enabled in current file",
   "node.id": "Node id",
   "node.inputVariable": "Input variables",
   "node.invalidChildren": "Invalid number of children",
-  "node.invalidGroup": "Node group '{{group}}' is not enabled",
+  "node.invalidExpression": "Invalid expression",
   "node.invalidValue": "Invalid value",
   "node.invalidVariableName": "Invalid variable name, should start with a letter or underscore",
   "node.name": "Node name",
