update antv G6 to v5

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -84,7 +84,7 @@
   "tree.name": "Tree name",
   "tree.desc": "Tree desc",
   "tree.export": "Export",
-  "tree.firstid": "First id",
+  "tree.prefix": "ID prefix",
   "tree.group": "Enable Node Grouping",
   "tree.group.placeholder": "Select node groups",
   "tree.vars": "Define Variables",
@@ -105,9 +105,11 @@
   "node.children": "Num children",
   "node.debug": "Debug",
   "node.deleteRootNodeDenied": "Unable to delete the root node",
+  "node.dropDenied": "This node position is denied to drop the node",
   "node.desc": "Node desc",
   "node.disabled": "Disabled",
   "node.editSubtreeDenied": "Unable to edit the subtree node",
+  "node.editFailed": "Node '{{name}}' edit failed",
   "node.group": "Node group",
   "node.groupNotEnabled": "One of '{{group}}' node group is not enabled in current file",
   "node.id": "Node id",
@@ -126,6 +128,7 @@
   "node.rootNodeAsSubtree": "Root node cann't be save as subtree",
   "node.subtree": "Subtree",
   "node.subtreePathError": "You should save the subtree inside the current workspace",
+  "node.subtreeSaveRootError": "Root node cann't be save as subtree",
   "node.type": "Node type",
   "node.undefinedVariable": "Variable '{{variable}}' is not defined",
 
