--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -84,7 +84,7 @@
   "tree.name": "行为树",
   "tree.desc": "说明",
   "tree.export": "导出",
-  "tree.firstid": "起始标识",
+  "tree.prefix": "标识前缀",
   "tree.group": "启用节点分组",
   "tree.group.placeholder": "选择节点分组",
   "tree.vars": "定义变量",
@@ -105,9 +105,11 @@
   "node.children": "子节点数量",
   "node.debug": "调试",
   "node.deleteRootNodeDenied": "不能删除根节点",
+  "node.dropDenied": "此节点位置不允许放置拖拽的节点",
   "node.desc": "节点说明",
   "node.disabled": "禁用",
   "node.editSubtreeDenied": "不能编辑子树节点",
+  "node.editFailed": "节点 {{name}} 编辑失败",
   "node.group": "节点分组",
   "node.groupNotEnabled": "节点分组 “{{group}}” 任意一个未在当前文件中启用",
   "node.id": "节点标识",
@@ -126,6 +128,7 @@
   "node.rootNodeAsSubtree": "根节点不能保存为子树",
   "node.subtree": "子树",
   "node.subtreePathError": "子树必须保存在当前工作区的目录内",
+  "node.subtreeSaveRootError": "根节点不能保存为子树",
   "node.type": "节点类型",
   "node.undefinedVariable": "变量 “{{variable}}” 未定义",
   "node.unknown.desc": "新建节点"
